# dns-query-monitor

./: .gitignore  Cargo.toml  Dockerfile  README.md  cliff.toml
.github/workflows/: build.yml  fmt.yml  release.yml  rust-clippy.yml  spelling.yml
src/: cli.rs  main.rs
src/dns/: collector.rs  event.rs  mod.rs  query.rs  types.rs
src/pcap/: capture.rs  mod.rs
src/ui/: app.rs  dashboard.rs  mod.rs
