[package]
name = "dns-query-monitor"
version = "0.1.1"
edition = "2024"
authors = ["yinheli <yinheli@gmail.com>"]
description = "Real-time DNS query monitoring tool with Terminal User Interface"
license = "MIT"
repository = "https://github.com/yinheli/dns-query-monitor"
keywords = ["dns", "monitor", "tui", "network", "packet"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
bytes = "1.9"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
env_logger = "0.11"
log = "0.4"
pcap = "2.0"
ratatui = "0.30"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

[[bin]]
name = "dns-query-monitor"
path = "src/main.rs"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
